fixed mobile overflow issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,4 +6,9 @@
   body {
     @apply bg-background-1 text-foreground-1 selection:bg-accent-1/10;
   }
+
+  html,
+  body {
+    @apply overflow-x-hidden
+  }
 }
